# HW_module9_Scrap_BS4

./: fill_DB.py  models.py  pyproject.toml  run_cli.py  scrap_bs4.py
